Fix some styling issues

--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -9,12 +9,13 @@
     </style>
 
     <style name="ControlTitleText">
-        <item name="android:background">@color/colorControlTitleBackground</item>
-        <item name="android:textColor">@color/white_100</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:minWidth">100dp</item>
-        <item name="android:padding">8dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorControlTitleBackground</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginLeft">8dp</item>
     </style>
 
 </resources>
